2010-07-26  Ugo Pattacini  <ugo.pattacini@iit.it>

	* src/libYARP_dev/include/yarp/dev/CartesianControl.h: added two more methods
	

2010-07-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpview/ImagePort.cpp: bring back broken save-image-set function
	

2010-07-23  Marco Randazzo  <marco.randazzo@iit.it>

	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.inl
	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
	ControlBoardHelper class now stores the conversion factor for joint torque sensors

2010-07-23  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* src/libYARP_OS/src/Property.cpp: support multi-line lists
	in config files without requiring "\" at the end of lines.
	So:
	   mymatrix ((1 2 3)
	             (4 5 6)
	             (7 8 9))
	will work as expected.  Successive lines are appended until
	all parentheses and quotes are balanced.

2010-07-22  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* example/swig/CMakeLists.txt: fix out-of-source python build
	(thanks Tomassino Ferrauto)

2010-07-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpOptions.cmake: ENABLE_FORCE_RPATH option for setting
	rpath - applied patch from Alexis Maldonado.  Purpose:
	ROS-friendliness.

	* src/modules/opencv/CMakeLists.txt: add missing link command
	(thanks again Juan!)

	* example/dev/FakeFrameGrabber.h: add missing header file
	(thanks Juan G Victores)

2010-07-14  Marco Randazzo  <marco.randazzo@iit.it>

    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
    * src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
    * src/libYARP_dev/src/RemoteControlBoard.cpp
	the methods setTorque of ITorqueControl interface has been
	renamed to setRefTorque.

2010-07-09  Marco Randazzo  <marco.randazzo@iit.it>
